# open-food-facts-mirror-ydin

./: .gitignore  Cargo.toml  README.md  ai-guesstimate.mjs  package-lock.json  package.json
.github/workflows/: ai-estimate.yml  fineli-sync.yml  sync.yml
docs/: local-ai-estimation.md  local-processing.md
src/: lib.rs  main.rs
