[package]
name = "open-food-facts-mirror"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "process_chunk"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
brotli = "3.4"
rayon = "1.8"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
regex = "1.10"
iso3166 = "1.2"
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
